# airlock-tool

./: .gitignore  LICENSE  README.md  pyproject.toml
airlock_tool/: __init__.py  cli.py  constants.py  hf2.py  uf2.py
