[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "airlock-tool"
version = "1.0.0"
description = "Airlock bootloader firmware update tool"
requires-python = ">=3.8"
dependencies = [
    "hidapi",
    "rich",
]

[project.optional-dependencies]
usb = ["pyusb"]

[project.scripts]
airlock-tool = "airlock_tool.cli:main"

[tool.setuptools.packages.find]
include = ["airlock_tool*"]
